# syros

./: .gitignore  README.md  alire.toml  limine.conf  meson.build  run.sh  syros.gpr
include/: limine.h
include/sys/: asm.h
lib/: meson.build
scripts/: fmt.sh  isogen.sh  isorun.sh
src/: syros.adb
subprojects/: flanterm.wrap
subprojects/packagefiles/flanterm_overlay/: meson.build
syros/src/: syros.adb
sys/: disk.c  disk.h  kmain.c  memory.c  memory.h  meson.build  serial.c
